--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,21 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Books 
+  p 
+    a.button(href='new-book') Create New Book 
+  table 
+    thread 
+      tr 
+        th Title 
+        th Author 
+        th Genre 
+        th Year 
+      tbody
+        each book in Books  
+          tr 
+            td
+              a(href="book_detail.html")= book.title
+              td= book.author
+              td= book.genre
+              td= book.year
