got create, update, and delete func. done

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,10 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+ h1 Page Not Found
+    p Sorry! We couldn't find the page you were looking for.
+      h2=error
+      h3=message
+    br
+    p
+      a.button(href='/books') Home
