fixed a few bugs

--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
- h1 UH OH! 
-    p Sorry! Something went wrong on our end.
+ h1 Page Not Found
+    p Sorry! We couldn't find the page you were looking for.
       h2=error
       h3=message
     br
