--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content 
     h1 Update Book
-    form(method="")
+    form(method="post")
       p
         label(for='title') Title
         input#title(name='title' type='text' value=title)
@@ -17,9 +17,9 @@ block content
         input#year(name='year' type='text' value=year)
       p
         input(type='submit' value='Update Book')
-    form(method='post' action='/update-book/' + id + '/delete' onsubmit='')
+    form(method='post' action='/books/' + id + '/delete' onsubmit='')
       p
-        a.button(href='all-books') Cancel
+        a.button(href='/books') Cancel
       p
         input(type='submit' value='Delete Book')
 
